--- a/config.toml
+++ b/config.toml
@@ -4,8 +4,10 @@ title = "Bookish Musings by A"
 theme = "digital-garden"
 themesdir = "../../"
 copyright = "AP©"
-enableEmojis = TRUE
-relativeURLs = TRUE
+enableEmojis = true
+relativeURLs = false
+canonifyURLs = true
+
 
 
 [params]
